--- a/config.json
+++ b/config.json
@@ -33,7 +33,7 @@
     "name": "Noah",
     "context": [
       "Commercial Pilot",
-      "DU Student",
+      "University of Denver Student",
       "Engineer",
       "Colorado Resident",
       "Spanish Fluency"
