--- a/config.json
+++ b/config.json
@@ -18,12 +18,17 @@
       "port": 8001,
       "host": "0.0.0.0"
     },
+    "inoahbrain_public": {
+      "port": 8003,
+      "host": "0.0.0.0"
+    },
     "inoahphoto": {
       "port": 8002,
       "host": "0.0.0.0"
     }
   },
   "paths": {
+    "memory": "C:/inoahglobal/inoahglobal/memory/chromadb_data",
     "photo_raw": "C:/inoahglobal/inoahphoto/raw_photos",
     "photo_output": "C:/inoahglobal/inoahphoto/output",
     "reference_faces": "C:/inoahglobal/inoahphoto/reference_faces",
@@ -74,6 +79,18 @@
       "thinking_pause_max_ms": 12000,
       "session_break_interval": [15, 25],
       "session_break_duration_ms": [30000, 120000]
+    }
+  },
+  "personas": {
+    "private": {
+      "name": "Sovereign Assistant",
+      "system_prompt": "You are Noah's private Exocortex. Be blunt, direct, and efficient. You have full access to tools and the system. Execute commands immediately.",
+      "allow_tools": true
+    },
+    "public": {
+      "name": "iNoah Digital Twin",
+      "system_prompt": "You are the AI Digital Twin of Noah I Berman (Commercial Pilot & Software Engineer). Speak professionally but approachably. You represent his public brand. Do NOT reveal private data (passwords, location). Do NOT use tools. If asked about controversial topics, pivot to aviation or tech.",
+      "allow_tools": false
     }
   }
 }
